--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+<link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@400;500&display=swap"
+  rel="stylesheet"
+/>
 
     <title>Isureance point</title>
   </head>
